<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="splash_name">Katalog</string>
    <string name="splash_desc"><![CDATA[Film & Serial TV]]></string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_title_movie">Movie</string>
    <string name="tab_title_tv">TV Show</string>
    <string name="logo_splash">logo_splash</string>
    <string name="detail_poster">detail_poster</string>
    <string name="rilis">Rilis:</string>
    <string name="genre">Genre:</string>
    <string name="tim">Tim:</string>
    <string name="pemeran">Pemeran:</string>
    <string name="nilai_pengguna">Nilai pengguna</string>
    <string name="kilasan_singkat">Kilasan singkat:</string>
    <string name="main_poster">main_poster</string>
    <string name="rating_img">rating_img</string>
    <string name="rating">rating</string>
    <string name="ask_yes">Yes</string>
    <string name="ask_no">No</string>
    <string name="del_title2">deleted</string>
    <string name="in_title">inserted</string>
    <string name="del_title">Delete!</string>
    <string name="del_question">Are you sure, want to delete</string>

    <string name="fav_movie_testing">Aquaman inserted</string>
    <string name="fav_movie_testing_del">Aquaman deleted</string>
    <string name="fav_tv_testing">Naruto Shipuden inserted</string>
    <string name="fav_tv_testing_del">Naruto Shipuden deleted</string>
</resources>